--- a/app/src/main/res/drawable/gradient_you_tube_video_item_text_background.xml
+++ b/app/src/main/res/drawable/gradient_you_tube_video_item_text_background.xml
@@ -5,6 +5,7 @@
             <gradient
                 android:angle="270"
                 android:startColor="#00000000"
+                android:centerColor="#00000000"
                 android:endColor="#80000000"
                 android:type="linear" />
         </shape>
