--- a/app/src/main/res/drawable/gradient_you_tube_video_item_text_background_top.xml
+++ b/app/src/main/res/drawable/gradient_you_tube_video_item_text_background_top.xml
@@ -5,6 +5,7 @@
             <gradient
                 android:angle="270"
                 android:endColor="#00000000"
+                android:centerColor="#00000000"
                 android:startColor="#80000000"
                 android:type="linear" />
         </shape>
