--- a/app/src/main/res/layout/layout_you_tube_video_item.xml
+++ b/app/src/main/res/layout/layout_you_tube_video_item.xml
@@ -77,8 +77,10 @@
         android:textColor="@android:color/white"
         android:paddingStart="5dp"
         android:paddingEnd="5dp"
-        android:paddingBottom="5dp"
-        android:textSize="20sp"
+        android:visibility="gone"
+        android:layout_margin="3dp"
+        android:textSize="17sp"
+        android:background="@drawable/background_duration_border"
         tools:text="3:45"/>
 
 </RelativeLayout>
